--- a/src/style/general.css
+++ b/src/style/general.css
@@ -44,7 +44,9 @@ header {
 .nav-menu-container {
   padding: 1rem;
 }
-.nav-menu-container .logo {
+.nav-menu-container .logo, .nav-menu-container .logo-link {
+  display: flex;
+  align-items: center;
   width: 2rem;
   height: 2rem;
 }
@@ -144,7 +146,7 @@ header {
     background: #f6f6eb;
     width: 100%;
     position: fixed;
-    top: 68px;
+    top: 65px;
     bottom: 0;
     left: 0;
     transform: translateX(100%);
